switch to silso csv data rather than txt version

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1794,6 +1794,19 @@
   accessed     = {2021 May 22 Saturday},
   }
 
+@article{wdcsilo_sunspot_20210524,
+  author       = {{SILSO World Data Center}},
+  address      = {Royal Observatory of Belgium, avenue Circulaire 3, 1180 Brussels, Belgium},
+  edition      = {2.0},
+  title        = {The International Sunspot Number},
+  journal      = {International Sunspot Number Monthly Bulletin and online catalogue},
+  year         = {2021},
+  month        = {May 24},
+  url          = {http://www.sidc.be/silso/datafiles},
+  note         = {\url{http://www.sidc.be/silso/INFO/snmtotcsv.php}},
+  accessed     = {2021 May 24 Monday},
+  }
+
 @article{welch1967,
   title        = {The use of fast Fourier transform for the estimation of power spectra: A method based on time averaging over short, modified periodograms},
   author       = {P. Welch},
