sunspots getData function

--- a/common/math/graphics/data/sunspots.tex
+++ b/common/math/graphics/data/sunspots.tex
@@ -30,6 +30,5 @@
   %-------------------------------------
   % plot data
   %-------------------------------------
-  %\fileplot{../data/sunspots_wdc-silso.dat}%
-  \fileplot{../data/sunspots_wdc-silso.dat}%
+  \fileplot{../data/sunspots.dat}%
 \end{pspicture}%
