--- a/common/math/graphics/data/sunspots_eigen_coefs.tex
+++ b/common/math/graphics/data/sunspots_eigen_coefs.tex
@@ -3,33 +3,38 @@
 % LaTeX file
 % nominal xunit = 10mm
 % nominal yunit = 10mm
-% nominal font size = \scriptsize
 %============================================================================
 \psset{xunit=0.11\psxunit}%  175mm width scaling factor = 175mm / ([180units - (-10units)]*10mm/unit) = 0.09210526
-\psset{yunit=0.001923077\psyunit}% (2000--600)*0.001923077*10 = 50mm
-\begin{pspicture}(-15,-600)(110,2000)%
+\psset{yunit=0.0015625\psyunit}% (2200--1000)*0.0015625*10 = 50mm
+\begin{pspicture}(-10,-1000)(110,2200)%
   %-------------------------------------
   % axes
   %-------------------------------------
   {%
-   %\psset{gridcolor=grid, subgridcolor=subgrid,subgriddiv=2,subgriddots=10}%
+   %\psset{gridcolor=grid, subgridcolor=subgrid,subgriddiv=20,subgriddots=10}%
+   %\psset{gridcolor=grid, xunit=10, yunit=100}%
     \psset{linecolor=axis,linewidth=0.75pt,showorigin=false}%
     \psset{ticks=all, labels=all, Dx=10,Dy=200}%
          %       |           |    |     |________ y-labels increment
          %       |           |    |______________ x-labels increment
          %       |           |___________________ ticks  x/y/all/none
          %       |_______________________________ labels x/y/all/none
-    \psaxes[yAxis=false]{->}(0,0)(0,-600)(110,2000)% x-axis
-    \psaxes[xAxis=false]{<->}(0,0)(0,-600)(110,2000)% y-axis
+    \psaxes[yAxis=false]{->}(0,0)(0,-1000)(110,2200)% x-axis
+    \psaxes[xAxis=false]{<->}(0,0)(0,-1000)(110,2200)% y-axis
+   %\psgrid(0,0)(0,-1000)(110,2200)%
     \uput[60](100,0){indices}%
   }%
   %-------------------------------------
+  % plot data
+  % https://ctan.mirrors.hoobly.com/graphics/pstricks/contrib/pst-plot/doc/pst-plot-doc.pdf
+  %-------------------------------------
+  \psset{linewidth=1pt, showpoints=true, plotstyle=LineToXAxis, dotscale=1, dotstyle=*, dotsize=1pt 2, linecolor=blue}%
+ %\psset{plotstyle=values}%
+  \readdata{\data}{../data/sunspots_eigen_coefs.dat}%
+  \listplot{\data}%
+  %-------------------------------------
   % data annotation
   %-------------------------------------
-  %-------------------------------------
-  % plot data
-  %-------------------------------------
-  \psset{linewidth=1pt}%
-  \psset{linecolor=blue}%
-  \fileplot{../data/sunspots_eigen_coefs.dat}%
+  \color{blue}%
+  \uput[0](105,-100){$\cdots$}%
 \end{pspicture}%
