sunspots DFT tex

--- a/common/math/graphics/data/sunspots_dft_basis.tex
+++ b/common/math/graphics/data/sunspots_dft_basis.tex
@@ -5,52 +5,48 @@
 % nominal yunit = 10mm
 % nominal font size = \scriptsize
 %============================================================================
-\psset{xunit=2.1875\psxunit}%  175mm / [(7units--1unit)*10mm/unit = 
-\psset{yunit=2.083333\psyunit}% 50mm / [(1.2--1.2)*10mm/unit] = 2.083333
-\begin{pspicture}(-1,-1.2)(7,1.2)%
+%\psset{xunit=2.25\psxunit}%  175mm / [(7units--1unit)*10mm/unit = 2.1875 
+%\psset{yunit=2\psyunit}% 50mm / [(1.2--1.2)*10mm/unit] = 2.083333
+\begin{pspicture}(-1,-1.5)(6.5,1.5)%
   %-------------------------------------
   % axes
   %-------------------------------------
   {%
    %\psset{gridcolor=grid, subgridcolor=subgrid,subgriddiv=2,subgriddots=10}%
     \psset{linecolor=axis,linewidth=0.75pt,showorigin=false}%
-    \psset{ticks=all, labels=all, Dx=10,Dy=1}%
+    \psset{ticks=all, labels=x, Dx=1,Dy=1}%
          %       |           |    |     |________ y-labels increment
          %       |           |    |______________ x-labels increment
          %       |           |___________________ ticks  x/y/all/none
          %       |_______________________________ labels x/y/all/none
-    \psaxes[yAxis=false]{ ->}(0,0)(-1,-1.2)(7,1.2)% x-axis
-    \psaxes[xAxis=false]{<->}(0,0)(-1,-1.2)(7,1.2)% y-axis
+    \psaxes[yAxis=false]{ ->}(0,0)(0,-1.5)(6.5,1.5)% x-axis
+    \psaxes[xAxis=false]{<->}(0,0)(0,-1.5)(6.5,1.5)% y-axis
    %\psgrid(0,0)(0,-0.5)(170,1.5)%
     \uput[60](168,0){\begin{tabular}[b]{c}lag in\\years\end{tabular}}%
   }%
   %-------------------------------------
   % data annotation
   %-------------------------------------
-  %{%
-  %  \rput[tl](10,11){$\begin{array}{|*{6}{m{8mm}l|}}
-  %    \hline
-  %    \psline[linecolor=blue]  (0,0)(10,0.5) & \lambda_1\vv_1 &
-  %    \psline[linecolor=red]   (0,0)(10,0.5) & \lambda_2\vv_2 &
-  %    \psline[linecolor=orange](0,0)(10,0.5) & \lambda_3\vv_3 &
-  %    \psline[linecolor=green] (0,0)(10,0.5) & \lambda_4\vv_4 &
-  %    \psline[linecolor=purple](0,0)(10,0.5) & \lambda_5\vv_5 &
-  %    \psline[linecolor=black] (0,0)(10,0.5) & \lambda_6\vv_6 \\
-  %    \hline
-  %  \end{array}$}
-  %}%
+  \uput[180](0,1){$\frac{\sqrt{50}}{50}$}%
+  \uput[180](0,-1){$-\frac{\sqrt{50}}{50}$}%
   %-------------------------------------
   % plot data
   %-------------------------------------
-  \psset{linewidth=1pt}%
+ % \psset{linewidth=1pt, showpoints=false, dotscale=1, dotstyle=*, dotsize=1pt 2, linecolor=blue}%
+  \psset{linewidth=0.5pt, showpoints=true, plotstyle=line, dotscale=0.75, dotstyle=*, dotsize=1pt 1}%
   \psset{linecolor=blue}%
-  \fileplot{../data/sunspots_dft_basis_cos_0.dat}%
+  \readdata{\data}{../data/sunspots_dft_basis_cos_0.dat}%
+  \listplot{\data}%
   \psset{linecolor=red}%
-  \fileplot{../data/sunspots_dft_basis_cos_1.dat}%
+  \readdata{\data}{../data/sunspots_dft_basis_cos_1.dat}%
+  \listplot{\data}%
   \psset{linecolor=orange}%
-  \fileplot{../data/sunspots_dft_basis_cos_2.dat}%
+  \readdata{\data}{../data/sunspots_dft_basis_cos_2.dat}%
+  \listplot{\data}%
   \psset{linecolor=green}%
-  \fileplot{../data/sunspots_dft_basis_sin_1.dat}%
+  \readdata{\data}{../data/sunspots_dft_basis_sin_1.dat}%
+  \listplot{\data}%
   \psset{linecolor=purple}%
-  \fileplot{../data/sunspots_dft_basis_sin_2.dat}%
+  \readdata{\data}{../data/sunspots_dft_basis_sin_2.dat}%
+  \listplot{\data}%
 \end{pspicture}%
