sunspot DFT acf

--- a/common/math/graphics/data/sunspots_dft_basis.tex
+++ b/common/math/graphics/data/sunspots_dft_basis.tex
@@ -5,9 +5,9 @@
 % nominal yunit = 10mm
 % nominal font size = \scriptsize
 %============================================================================
-%\psset{xunit=2.25\psxunit}%  175mm / [(7units--1unit)*10mm/unit = 2.1875 
-%\psset{yunit=2\psyunit}% 50mm / [(1.2--1.2)*10mm/unit] = 2.083333
-\begin{pspicture}(-1,-1.5)(6.5,1.5)%
+\psset{xunit=2.5\psxunit}%  175mm / [(6.5units--0.5unit)*10mm/unit = 2.5
+%\psset{yunit=2\psyunit}% 30mm / [(1.5--1.5)*10mm/unit] = 1
+\begin{pspicture}(-0.5,-1.5)(6.5,1.5)%
   %-------------------------------------
   % axes
   %-------------------------------------
@@ -33,7 +33,7 @@
   % plot data
   %-------------------------------------
  % \psset{linewidth=1pt, showpoints=false, dotscale=1, dotstyle=*, dotsize=1pt 2, linecolor=blue}%
-  \psset{linewidth=0.5pt, showpoints=true, plotstyle=line, dotscale=0.75, dotstyle=*, dotsize=1pt 1}%
+  \psset{linewidth=0.5pt, showpoints=true, plotstyle=line, dotscale=1.25, dotstyle=*, dotsize=1pt 2}%
   \psset{linecolor=blue}%
   \readdata{\data}{../data/sunspots_dft_basis_cos_0.dat}%
   \listplot{\data}%
