D1 and D2 wavelet edit(s)

--- a/common/wavelets/compactp.tex
+++ b/common/wavelets/compactp.tex
@@ -1102,13 +1102,13 @@ and it is possible to compute this wavelet system using ``time-domain" technique
   \exboxt{\begin{tabular}{cc}
     $\begin{array}{|l|r|r|}
       \hline
-      n & h_n  & g_n  \\
-      \hline
-        0   & \frac{1+\sqrt{3}}{4}  &  \frac{1-\sqrt{3}}{4}  \\
-        1   & \frac{3+\sqrt{3}}{4}  & -\frac{3-\sqrt{3}}{4}  \\
-        2   & \frac{3-\sqrt{3}}{4}  &  \frac{3+\sqrt{3}}{4}  \\
-        3   & \frac{1-\sqrt{3}}{4}  & -\frac{1+\sqrt{3}}{4}  \\
-      \hline
+      n & h_n  & g_n
+      \\\hline
+        0 & \frac{\sqrt{2}}{8}(1+\sqrt{3}) &  \frac{\sqrt{2}}{8}(1-\sqrt{3})
+      \\1 & \frac{\sqrt{2}}{8}(3+\sqrt{3}) & -\frac{\sqrt{2}}{8}(3-\sqrt{3})
+      \\2 & \frac{\sqrt{2}}{8}(3-\sqrt{3}) &  \frac{\sqrt{2}}{8}(3+\sqrt{3})
+      \\3 & \frac{\sqrt{2}}{8}(1-\sqrt{3}) & -\frac{\sqrt{2}}{8}(1+\sqrt{3})
+      \\\hline
     \end{array}$&\tbox{\includegraphics{../common/math/graphics/pdfs/D2_pz.pdf}}\\%
     \includegraphics{../common/math/graphics/pdfs/d2_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/d2_psi_g.pdf}
   \end{tabular}}
