--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -1012,30 +1012,42 @@ Let $\support\ff$ be the support of a function $\ff$ \xref{def:support}.
 
 %--------------------------------------
 \begin{example}
+\label{ex:wavstrct_Dp}
 %--------------------------------------
-Here are some examples using \fncte{Daubechies wavelet function}s.
-\exbox{\begin{array}{NNN}
-%    \includegraphics{../common/math/graphics/pdfs/b3_g.pdf}
-    \includegraphics{../common/math/graphics/pdfs/d1_psi_g.pdf}
-   &\includegraphics{../common/math/graphics/pdfs/d2_psi_g.pdf}
-   &\includegraphics{../common/math/graphics/pdfs/d3_psi_g.pdf}
-   %&\includegraphics{../common/math/graphics/pdfs/d4_psi_g.pdf}
-  %\\\fncte{B-spline of order 2}
-  \\\fncte{Daubechies-1}
-   &\fncte{Daubechies-2}
-   &\fncte{Daubechies-3}
-   %&\fncte{Daubechies-4 wavelet function}
-  \\\ifxref{compactp}{ex:dau-p1}&\ifxref{compactp}{ex:dau-p2}&\ifxref{compactp}{ex:dau-p3}
-\end{array}}
+\begin{figure}[th]
+  \centering%
+  \exbox{\begin{array}{NNN}
+      \includegraphics{../common/math/graphics/pdfs/d1_psi_g.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/d2_psi_g.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/d3_psi_g.pdf}
+    \\\fncte{Daubechies-1}
+     &\fncte{Daubechies-2}
+     &\fncte{Daubechies-3}
+    \\\ifxref{compactp}{ex:dau-p1}
+     &\ifxref{compactp}{ex:dau-p2}
+     &\ifxref{compactp}{ex:dau-p3}
+  \end{array}}
+  \caption{\fncte{Daubechies-$p$ wavelet function}s with $p$ \prope{vanishing moment}s 
+           \xref{ex:wavstrct_Dp}\label{fig:wavstrct_Dp}}
+\end{figure}
+\prefpp{fig:wavstrct_Dp} illustrates some \fncte{Daubechies-$p$ wavelet function}s with $p$ \prope{vanishing moment}s.
+Note the following \xref{thm:wavstrct_cqf}:
+\\\indentx$\begin{array}{l>{\ds}rc>{\ds}lc>{\ds}l}
+    p=1 & \sum_{n=0}^{n=1} g_n 
+        &=& \frac{1}{2} \brp{ \sqrt{2} - \brp{-\sqrt{2}} } 
+        &=& \sqrt{2}
+    \\
+    p=2 & \sum_{n=0}^{n=3} g_n 
+        &=& \frac{\sqrt{2}}{8} \brp{ (1-\sqrt{3}) + (3-\sqrt{3}) + (3+\sqrt{3}) + (1+\sqrt{3}) }
+        &=& \sqrt{2}
+\end{array}$
 \end{example}
 
 %=======================================
 \section{Examples}
 %=======================================
-%Under the very general constraints of this chapter, I know of no wavelet examples.
 No further examples of wavelets are presented in this section. 
 Examples begin in the next chapter which is about a property called the \prope{partition of unity}.
-%The very minimal of requirements, it seems is a \prope{partition of unity} \xref{chp:pounity}.
 Other design constraints leading to wavelets with more ``powerful" properties include 
 \prope{vanishing moments} \xref{chp:vanish}, \prope{orthonormality}\ifsxref{ortho}{chp:ortho},
 \prope{compact support}\ifsxref{compactp}{chp:compactp}, and \prope{minimum phase} \xref{def:minphase}.
