--- a/common/math/graphics/wavelets/d2_psi_g.tex
+++ b/common/math/graphics/wavelets/d2_psi_g.tex
@@ -5,7 +5,7 @@
 % nominal unit = 10mm
 % nominal fontsize = \scriptsize
 %============================================================================
-\begin{pspicture}(-1,-1.5)(3.5,2.2)%
+\begin{pspicture}(-1,-1.5)(3.6,2.2)%
   %-------------------------------------
   % nodes
   %-------------------------------------
@@ -18,13 +18,20 @@
   %-------------------------------------
   \psaxes[linecolor=axis,yAxis=false,labels=none,linewidth=0.75pt]{->}(0,0)(0,-1.5)(3.5,2.2)%  x-axis
   \psaxes[linecolor=axis,xAxis=false,linewidth=0.75pt]{<->}(0,0)(0,-1.5)(3.5,2.2)% y-axis
+  \fileplot{../wavelets/d2_psi.dat}%
   \psline[linecolor=red]{-o}(0,0)(g0)%  
   \psline[linecolor=red]{-o}(1,0)(g1)%  
   \psline[linecolor=red]{-o}(2,0)(g2)%  
   \psline[linecolor=red]{-o}(3,0)(g3)%  
-  \fileplot{../wavelets/d2_psi.dat}%
   %-------------------------------------
-  % labels
+  % data labels
+  %-------------------------------------
+  \uput{3pt}[-100](g0){$\scy \frac{\sqrt{2}}{8}(1-\sqrt{3})$}%
+  \uput{3pt}[ -90](g1){$\scy-\frac{\sqrt{2}}{8}(3-\sqrt{3})$}%
+  \uput{3pt}[  90](g2){$\scy \frac{\sqrt{2}}{8}(3+\sqrt{3})$}%
+  \uput{3pt}[ -90](g3){$\scy-\frac{\sqrt{2}}{8}(1+\sqrt{3})$}%
+  %-------------------------------------
+  % axis labels
   %-------------------------------------
   \uput{2mm}[ 90](1,0){$1$}% x-axis label
   \uput{2mm}[-90](2,0){$2$}% x-axis label
