scaling function partition of unity constraint

--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -1010,10 +1010,6 @@ Let $\support\ff$ be the support of a function $\ff$ \xref{def:support}.
 \end{enumerate}
 \end{proof}
 
-%--------------------------------------
-\begin{example}
-\label{ex:wavstrct_Dp}
-%--------------------------------------
 \begin{figure}[th]
   \centering%
   \exbox{\begin{array}{NNN}
@@ -1030,6 +1026,10 @@ Let $\support\ff$ be the support of a function $\ff$ \xref{def:support}.
   \caption{\fncte{Daubechies-$p$ wavelet function}s with $p$ \prope{vanishing moment}s 
            \xref{ex:wavstrct_Dp}\label{fig:wavstrct_Dp}}
 \end{figure}
+%--------------------------------------
+\begin{example}
+\label{ex:wavstrct_Dp}
+%--------------------------------------
 \prefpp{fig:wavstrct_Dp} illustrates some \fncte{Daubechies-$p$ wavelet function}s with $p$ \prope{vanishing moment}s.
 Note the following \xref{thm:wavstrct_cqf}:
 \\\indentx$\begin{array}{l>{\ds}rc>{\ds}lc>{\ds}l}
@@ -1051,6 +1051,7 @@ Examples begin in the next chapter which is about a property called the \prope{p
 Other design constraints leading to wavelets with more ``powerful" properties include 
 \prope{vanishing moments} \xref{chp:vanish}, \prope{orthonormality}\ifsxref{ortho}{chp:ortho},
 \prope{compact support}\ifsxref{compactp}{chp:compactp}, and \prope{minimum phase} \xref{def:minphase}.
+\clearpage
 
 %Here are some examples of \structe{wavelet systems} \xref{def:wavsys}:
 %\begin{longtable}{|l||ll||c|c|c|c|c|}
