partition of unity B-spline examples

--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -1043,15 +1043,15 @@ Note the following \xref{thm:wavstrct_cqf}:
 \end{array}$
 \end{example}
 
-%=======================================
-\section{Examples}
-%=======================================
-No further examples of wavelets are presented in this section. 
-Examples begin in the next chapter which is about a property called the \prope{partition of unity}.
-Other design constraints leading to wavelets with more ``powerful" properties include 
-\prope{vanishing moments} \xref{chp:vanish}, \prope{orthonormality}\ifsxref{ortho}{chp:ortho},
-\prope{compact support}\ifsxref{compactp}{chp:compactp}, and \prope{minimum phase} \xref{def:minphase}.
-\clearpage
+%%=======================================
+%\section{Examples}
+%%=======================================
+%No further examples of wavelets are presented in this section. 
+%Examples begin in the next chapter which is about a property called the \prope{partition of unity}.
+%Other design constraints leading to wavelets with more ``powerful" properties include 
+%\prope{vanishing moments} \xref{chp:vanish}, \prope{orthonormality}\ifsxref{ortho}{chp:ortho},
+%\prope{compact support}\ifsxref{compactp}{chp:compactp}, and \prope{minimum phase} \xref{def:minphase}.
+%\clearpage
 
 %Here are some examples of \structe{wavelet systems} \xref{def:wavsys}:
 %\begin{longtable}{|l||ll||c|c|c|c|c|}
